# interviewer.io

./: .env.example  README.md  interview_results.xlsx  interviewer.py  main.py  pyproject.toml
problems/: dummy.py
