[project]
name = "interviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "autogen>=0.13.0", "autogen-agentchat>=0.5.7", "autogen-ext[mcp,openai]>=0.5.7", "autogenstudio>=0.4.2.2", "openpyxl>=3.1.5", "pydantic>=2.13.4", "questionary>=2.1.1", "rich>=15.0.0", ]